DT-2004-06-17-0: Bugfix:    o Fixed bad link in DRMAA howto (again)
                            o Added copyright placeholders to Java source files
                            o Renamed DRMAA Java binding README
                            o Fixed various JGrid bugs
                            o Fixed factory bug in DRMAA Java binding
                            o Fixed multi-threaded errno issue on HP-UX 11
                            o Added JGrid to experimental html file
                            - HP11 and HP1164 will need a aimk -clean
                 Changed:   doc, www, classes, DRMAA, JGrid, aimk

MD-2004-06-17-0: Bugfix:    remove stat_log_time from configuration
                 Changed:   inst_qmaster.sh
                 Review:    AS
                 Issue:     1082
                 Bugtraq:   506330

MD-2004-06-16-0: Bugfix:    Install script fails when sgeadmin is selected 
                            as install user
                 Changed:   inst_qmaster.sh
                 Review:    JG
                 Issue:     1090

SG-2004-06-16-0: Bugfix:    This bugfix is related to SG-2004-06-09-2. The
                            prefious one did not fix all aspects of the growing
                            scheduler and master. The implementation of the
                            job categories was buggy.
                 Changed:   scheduler
                 Review:    JG
                 Issue:     1087
                 Bugtraq:   5063311

DT-2004-06-15-1: Bugfix:    o Fixed DRMAA Java binding Makefile
                            o Fixed installation of libjdrmaa in distinst
                 Cleanup:   o Removed tabs from aimk help output
                            o Removed unused code from sge_path_alias.c
                 Enhancem.: o Ported JGrid to DRMAA Java binding
                 Changed:   aimk, distinst, sge_path_alias, DRMAA, JGrid

DT-2004-06-15-0: Bugfix:    o Fixed minor bugs in DRMAA Java binding