@@ -2069,6 +2069,15 @@ proc update_ts_config_version {} {
       wait_for_enter
       return 0
    }
+  
+   if { $ts_config(version) == "1.6" } {
+      puts $CHECK_OUTPUT "\ntestsuite configuration update from 1.6 to 1.7 ..."
+      config_build_ts_config_1_7
+      show_config ts_config
+      wait_for_enter
+      return 0
+   }
+
    
    puts $CHECK_OUTPUT "\nunexpected version $ts_config(version), need version $actual_ts_config_version"
    return -1
